[package]
name = "sparrow"
version = "0.1.0"
edition = "2024"
default-run = "sparrow"
description = "State-of-the-art nesting heuristic for 2D irregular strip packing problems"

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "sparrow"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bench.rs"

[dependencies]
base64 = "0.22"
jagua-rs = { features = ["spp"], version = "0.7.0" }
#jagua-rs = { features = ["spp"], git = "https://github.com/JeroenGar/jagua-rs.git", rev = "06b4915aac55c944d966aaf5c6b472a7fd699c6e"}
#jagua-rs = { features = ["spp"], path = "../jagua-rs/jagua-rs" }
rand = "0.10"
rand_distr = "0.6"
svg = "0.18"
itertools = "0.14"
log = { version = "0.4", features = ["release_max_level_info"] }
fern = "0.7"
serde = "1.0"
serde_json = "1.0"
tap = "1.0"
slotmap = "1.0"
float-cmp = "0.10"
ordered-float = "5.0"
rayon = "1.10"
numfmt = "1.1"
num_cpus = "1.17"
jiff = "0.2"
test-case = "3.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

getrandom = { version = "0.4", features = ["wasm_js"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ctrlc = "3.5"

[features]
live_svg = []
only_final_svg = []
simd = []

[profile.dev]
overflow-checks = true

[profile.debug-release]
inherits = "release"
debug-assertions = true
debug = true

[profile.release]
opt-level = 3
lto = "fat"

[profile.test]
opt-level = 3
debug-assertions = true
overflow-checks = true
debug = true